// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-chip-list> Component basic usage with links 1`] = `
<bolt-chip-list id="c-bolt-chip-list-12345">
  <replace-with-children class="c-bolt-chip-list">
    <bolt-list tag="ul"
               display="inline"
               spacing="xsmall"
               separator="none"
               align="start"
               valign="center"
    >
      <replace-with-grandchildren>
        <ul class="c-bolt-list c-bolt-list--display-inline c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-center">
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
                <bolt-chip url="#!">
                  <replace-with-grandchildren>
                    <a href="#!"
                       class="c-bolt-chip c-bolt-chip--link c-bolt-chip--size-small"
                       is="shadow-root"
                    >
                      <replace-with-children class="c-bolt-chip__text">
                        Chip link 1
                      </replace-with-children>
                    </a>
                  </replace-with-grandchildren>
                </bolt-chip>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
                <bolt-chip url="#!">
                  <replace-with-grandchildren>
                    <a href="#!"
                       class="c-bolt-chip c-bolt-chip--link c-bolt-chip--size-small"
                       is="shadow-root"
                    >
                      <replace-with-children class="c-bolt-chip__text">
                        Chip link 2
                      </replace-with-children>
                    </a>
                  </replace-with-grandchildren>
                </bolt-chip>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
                <bolt-chip url="#!">
                  <replace-with-grandchildren>
                    <a href="#!"
                       class="c-bolt-chip c-bolt-chip--link c-bolt-chip--size-small"
                       is="shadow-root"
                    >
                      <replace-with-children class="c-bolt-chip__text">
                        Chip link 3
                      </replace-with-children>
                    </a>
                  </replace-with-grandchildren>
                </bolt-chip>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item last>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item">
                <bolt-chip url="#!">
                  <replace-with-grandchildren>
                    <a href="#!"
                       class="c-bolt-chip c-bolt-chip--link c-bolt-chip--size-small"
                       is="shadow-root"
                    >
                      <replace-with-children class="c-bolt-chip__text">
                        Chip link 4
                      </replace-with-children>
                    </a>
                  </replace-with-grandchildren>
                </bolt-chip>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
        </ul>
      </replace-with-grandchildren>
    </bolt-list>
  </replace-with-children>
</bolt-chip-list>
`;

exports[`<bolt-chip-list> Component basic usage with mixed behavior 1`] = `
<bolt-chip-list id="c-bolt-chip-list-12345">
  <replace-with-children class="c-bolt-chip-list">
    <bolt-list tag="ul"
               display="inline"
               spacing="xsmall"
               separator="none"
               align="start"
               valign="center"
    >
      <replace-with-grandchildren>
        <ul class="c-bolt-list c-bolt-list--display-inline c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-center">
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
                <bolt-chip url="#!">
                  <replace-with-grandchildren>
                    <a href="#!"
                       class="c-bolt-chip c-bolt-chip--link c-bolt-chip--size-small"
                       is="shadow-root"
                    >
                      <replace-with-children class="c-bolt-chip__text">
                        Chip link 1
                      </replace-with-children>
                    </a>
                  </replace-with-grandchildren>
                </bolt-chip>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
                <bolt-chip>
                  <replace-with-grandchildren>
                    <span class="c-bolt-chip c-bolt-chip--size-small"
                          is="shadow-root"
                    >
                      <replace-with-children class="c-bolt-chip__text">
                        Chip text 1
                      </replace-with-children>
                    </span>
                  </replace-with-grandchildren>
                </bolt-chip>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
                <bolt-chip url="#!">
                  <replace-with-grandchildren>
                    <a href="#!"
                       class="c-bolt-chip c-bolt-chip--link c-bolt-chip--size-small"
                       is="shadow-root"
                    >
                      <replace-with-children class="c-bolt-chip__text">
                        Chip link 3
                      </replace-with-children>
                    </a>
                  </replace-with-grandchildren>
                </bolt-chip>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item last>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item">
                <bolt-chip>
                  <replace-with-grandchildren>
                    <span class="c-bolt-chip c-bolt-chip--size-small"
                          is="shadow-root"
                    >
                      <replace-with-children class="c-bolt-chip__text">
                        Chip text 2
                      </replace-with-children>
                    </span>
                  </replace-with-grandchildren>
                </bolt-chip>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
        </ul>
      </replace-with-grandchildren>
    </bolt-list>
  </replace-with-children>
</bolt-chip-list>
`;

exports[`<bolt-chip-list> Component basic usage without links 1`] = `
<bolt-chip-list id="c-bolt-chip-list-12345">
  <replace-with-children class="c-bolt-chip-list">
    <bolt-list tag="ul"
               display="inline"
               spacing="xsmall"
               separator="none"
               align="start"
               valign="center"
    >
      <replace-with-grandchildren>
        <ul class="c-bolt-list c-bolt-list--display-inline c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-center">
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
                <bolt-chip>
                  <replace-with-grandchildren>
                    <span class="c-bolt-chip c-bolt-chip--size-small"
                          is="shadow-root"
                    >
                      <replace-with-children class="c-bolt-chip__text">
                        Chip text 1
                      </replace-with-children>
                    </span>
                  </replace-with-grandchildren>
                </bolt-chip>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
                <bolt-chip>
                  <replace-with-grandchildren>
                    <span class="c-bolt-chip c-bolt-chip--size-small"
                          is="shadow-root"
                    >
                      <replace-with-children class="c-bolt-chip__text">
                        Chip text 2
                      </replace-with-children>
                    </span>
                  </replace-with-grandchildren>
                </bolt-chip>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
                <bolt-chip>
                  <replace-with-grandchildren>
                    <span class="c-bolt-chip c-bolt-chip--size-small"
                          is="shadow-root"
                    >
                      <replace-with-children class="c-bolt-chip__text">
                        Chip text 3
                      </replace-with-children>
                    </span>
                  </replace-with-grandchildren>
                </bolt-chip>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
          <bolt-list-item last>
            <replace-with-grandchildren>
              <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item">
                <bolt-chip>
                  <replace-with-grandchildren>
                    <span class="c-bolt-chip c-bolt-chip--size-small"
                          is="shadow-root"
                    >
                      <replace-with-children class="c-bolt-chip__text">
                        Chip text 4
                      </replace-with-children>
                    </span>
                  </replace-with-grandchildren>
                </bolt-chip>
              </li>
            </replace-with-grandchildren>
          </bolt-list-item>
        </ul>
      </replace-with-grandchildren>
    </bolt-list>
  </replace-with-children>
</bolt-chip-list>
`;

exports[`<bolt-chip-list> Component truncate 1`] = `
<bolt-chip-list
  id="c-bolt-chip-list-12345"
  style=""
  truncate="3"
>
  
  
      
    
    




  

  <bolt-list
    align="start"
    display="inline"
    separator="none"
    spacing="xsmall"
    style=""
    tag="ul"
    valign="center"
  >
    
      
    
  

    
  
                        


    <bolt-list-item
      style=""
    >
      
  

    
  
                    






        




      <bolt-chip
        style=""
        url="#!"
      >
        
        Chip link 1
      
      </bolt-chip>
          
          
    </bolt-list-item>
    
                                


    <bolt-list-item
      style=""
    >
      
  

    
  
                    






        




      <bolt-chip
        style=""
        url="#!"
      >
        
        Chip link 2
      
      </bolt-chip>
          
          
    </bolt-list-item>
    
                                


    <bolt-list-item
      style=""
    >
      
  

    
  
                    






        




      <bolt-chip
        style=""
        url="#!"
      >
        
        Chip link 3
      
      </bolt-chip>
          
          
    </bolt-list-item>
    
                                


    <bolt-list-item
      aria-hidden="true"
      hidden=""
      style=""
    >
      
  

    
  
                    






        




      <bolt-chip
        style=""
        url="#!"
      >
        
        Chip link 4
      
      </bolt-chip>
          
          
    </bolt-list-item>
    
                                


    <bolt-list-item
      aria-hidden="true"
      hidden=""
      style=""
    >
      
  

    
  
                    






        




      <bolt-chip
        style=""
        url="#!"
      >
        
        Chip link 5
      
      </bolt-chip>
          
          
    </bolt-list-item>
    
                                


                  
    <bolt-list-item
      last=""
      style=""
      truncate-trigger=""
    >
      <!---->
      
          
                
      <bolt-trigger
        aria-label="Show more"
        style=""
      >
        
                  
        <bolt-chip
          icon-only=""
          style=""
        >
          
                    
          <bolt-icon
            name="more"
            slot="after"
            style=""
          >
            <span
              class="c-bolt-icon c-bolt-icon--more"
              style=""
            >
              <svg
                class="c-bolt-icon__icon"
                style=""
              >
                <use
                  style=""
                  xlink:href="#more"
                />
              </svg>
            </span>
            
                    
          </bolt-icon>
          
                  
        </bolt-chip>
        
                
      </bolt-trigger>
      
              
        
      <!---->
    </bolt-list-item>
  </bolt-list>
  
  

                
      
</bolt-chip-list>
`;

exports[`<bolt-chip-list> Component truncate 2`] = `
<bolt-chip-list truncate="3"
                id="c-bolt-chip-list-12345"
>
  <replace-with-children class="c-bolt-chip-list">
    <style class="c-bolt-chip-list--no-js">
      #c-bolt-chip-list-12345 #c-bolt-chip-list__input-12345:not(:checked) + bolt-list bolt-list-item:nth-child(n+3) ~  bolt-list-item:not([truncate-trigger-expand]),
        #c-bolt-chip-list-12345 #c-bolt-chip-list__input-12345:checked + bolt-list [truncate-trigger-expand] {
          display: none;
        }
    </style>
  </replace-with-children>
  <input type="checkbox"
         id="c-bolt-chip-list__input-12345"
         class="c-bolt-chip-list__input c-bolt-chip-list--no-js"
  >
  <bolt-list tag="ul"
             display="inline"
             spacing="xsmall"
             separator="none"
             align="start"
             valign="center"
  >
    <replace-with-grandchildren>
      <ul class="c-bolt-list c-bolt-list--display-inline c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-center">
        <bolt-list-item>
          <replace-with-grandchildren>
            <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
              <bolt-chip url="#!">
                <replace-with-grandchildren>
                  <a href="#!"
                     class="c-bolt-chip c-bolt-chip--link c-bolt-chip--size-small"
                     is="shadow-root"
                  >
                    <replace-with-children class="c-bolt-chip__text">
                      Chip link 1
                    </replace-with-children>
                  </a>
                </replace-with-grandchildren>
              </bolt-chip>
            </li>
          </replace-with-grandchildren>
        </bolt-list-item>
        <bolt-list-item>
          <replace-with-grandchildren>
            <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
              <bolt-chip url="#!">
                <replace-with-grandchildren>
                  <a href="#!"
                     class="c-bolt-chip c-bolt-chip--link c-bolt-chip--size-small"
                     is="shadow-root"
                  >
                    <replace-with-children class="c-bolt-chip__text">
                      Chip link 2
                    </replace-with-children>
                  </a>
                </replace-with-grandchildren>
              </bolt-chip>
            </li>
          </replace-with-grandchildren>
        </bolt-list-item>
        <bolt-list-item>
          <replace-with-grandchildren>
            <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
              <bolt-chip url="#!">
                <replace-with-grandchildren>
                  <a href="#!"
                     class="c-bolt-chip c-bolt-chip--link c-bolt-chip--size-small"
                     is="shadow-root"
                  >
                    <replace-with-children class="c-bolt-chip__text">
                      Chip link 3
                    </replace-with-children>
                  </a>
                </replace-with-grandchildren>
              </bolt-chip>
            </li>
          </replace-with-grandchildren>
        </bolt-list-item>
        <bolt-list-item>
          <replace-with-grandchildren>
            <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
              <bolt-chip url="#!">
                <replace-with-grandchildren>
                  <a href="#!"
                     class="c-bolt-chip c-bolt-chip--link c-bolt-chip--size-small"
                     is="shadow-root"
                  >
                    <replace-with-children class="c-bolt-chip__text">
                      Chip link 4
                    </replace-with-children>
                  </a>
                </replace-with-grandchildren>
              </bolt-chip>
            </li>
          </replace-with-grandchildren>
        </bolt-list-item>
        <bolt-list-item>
          <replace-with-grandchildren>
            <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
              <bolt-chip url="#!">
                <replace-with-grandchildren>
                  <a href="#!"
                     class="c-bolt-chip c-bolt-chip--link c-bolt-chip--size-small"
                     is="shadow-root"
                  >
                    <replace-with-children class="c-bolt-chip__text">
                      Chip link 5
                    </replace-with-children>
                  </a>
                </replace-with-grandchildren>
              </bolt-chip>
            </li>
          </replace-with-grandchildren>
        </bolt-list-item>
        <bolt-list-item last
                        truncate-trigger
                        truncate-trigger-expand
        >
          <replace-with-grandchildren>
            <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item">
              <replace-with-grandchildren>
                <label class="c-bolt-chip-list__label"
                       for="c-bolt-chip-list__input-12345"
                >
                  <bolt-chip icon-only>
                    <replace-with-grandchildren>
                      <span class="c-bolt-chip c-bolt-chip--size-small c-bolt-chip--icon-only"
                            is="shadow-root"
                      >
                        <replace-with-children class="c-bolt-chip__text">
                        </replace-with-children>
                        <replace-with-children class="c-bolt-chip__icon">
                          <bolt-icon slot="after"
                                     name="more"
                          >
                            <span class="c-bolt-icon c-bolt-icon--more">
                              <svg class="c-bolt-icon__icon"
                                   xmlns="http://www.w3.org/2000/svg"
                                   viewbox="0 0 24 24"
                              >
                                <g fill="none"
                                   fill-rule="evenodd"
                                >
                                  <path>
                                  </path>
                                  <g fill="var(--bolt-theme-icon, currentColor)">
                                    <path d="M14.07 12a2 2 0 11-4.002-.001 2 2 0 014.001.001M6 12A2 2 0 112 11.999 2 2 0 016 12M22.139 12a2 2 0 11-4.002-.001A2 2 0 0122.14 12">
                                    </path>
                                  </g>
                                </g>
                              </svg>
                            </span>
                          </bolt-icon>
                        </replace-with-children>
                      </span>
                    </replace-with-grandchildren>
                  </bolt-chip>
                </label>
              </replace-with-grandchildren>
            </li>
          </replace-with-grandchildren>
        </bolt-list-item>
      </ul>
    </replace-with-grandchildren>
  </bolt-list>
</bolt-chip-list>
`;
